[FIX] mass_mailing: fix template compressed mode
Purpose
=======
Fix the theme templates which are displayed in compressed mode
on large screen sizes.

Specification
=============
Following the extension of the chatter's width, the iframe width became
too small to be considered as a large viewport meaning all the bootstrap
lg rules aren't correctly applied.

Making sure the iframe width is large enough by making its position absolute
so that it takes the full form width.
Preventing the website snippets from overlapping the template by adding a
padding right to the layout.

Choosing the iframe to be position absolute instead of the website snippets
to make sure the snippets drag to scroll feature still works.

related commits:
916ac17
cf6cd5e

Task-4086474

--- a/addons/mass_mailing/static/src/scss/themes/theme_default.scss
+++ b/addons/mass_mailing/static/src/scss/themes/theme_default.scss
@@ -176,6 +176,11 @@ div.col:not([align]) {
     border-collapse:separate;
 }
 
+// Prevent the website snippets sidebar from overlapping the template
+body.has_snippets_sidebar .o_layout {
+    padding-right: 288px !important; // snippets sidebar width
+}
+
 // Compatibility: mb/mt classes on <td/> elements were interpreted as paddings
 // instead of margins before the introduction of pb/pt classes. As thoses mb/mt
 // classes may remain on clients' templates, <td/> are forced to 0 margin to
